master
- noface
  It is now possible to set a Interval for background tabs.
  Add Optional increase value for Updater.
- Zixaphir
  Linkification

2.35.6
- noface
  Don't automatically expand spoilers when using Expand Images. 
- Mayhem
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/, again.

2.35.5
- Mayhem
  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).

2.35.4
- Mayhem
  Fix 4chan Pass with QR on Firefox.

2.35.3
- Mayhem
  Add support for 4chan Pass.
  You can now use 'Enter' in keybind combinations.

2.35.2
- Mayhem
  Use 4chan's API to fetch posts for Thread Updater.
  Minor fixes.
- noface
  Break Quote Threading.

2.35.1
- Mayhem
  Temporary fix Scriptish.

2.35.0
- Mayhem
  Add /g/, /k/, /w/, /an/, /cgl/, /ck/, /lit/, /toy/ and /x/ archived image redirection.
  One-word-captcha now works in the report window.
  Fix duplicate file upload error link.
  Use 4chan's API to fetch posts for:
    - Quote Inlining.
    - Quote Previewing.
    - Thread Expansion.
    - Comment Expansion.
  Fix compatibility with Scriptish's auto-udpater.

2.34.10
- Mayhem
  Fix 4chan X. Blame moot.
  
2.34.9
- noface
  Re-adjust to new recaptcha - now only the control word is needed.

2.34.8
- small fixes

2.34.7
- noface
  Adjust to new recaptcha (now a space must be provided).

- Mayhem
  Fix support of change in 4chan's HTML about hidden filename in case of spoiler.

2.34.6
- Mayhem
  Fix cooldown on /q/.
  Fix thread creation with no file on /q/.
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/.
  Add /mlp/ archive redirection.

2.34.5
- Mayhem
  Add /q/ archive redirection.

2.34.4
- Mayhem
  Various fixes.
- ahodesuka
  Add png thumbnail replacement option.
- aeosynth
  Add Markdown.

2.34.3
- Mayhem
  Update /k/ archive redirection.
- noface
  Remove redundant entries from the updater

2.34.2
- noface
  Insert Quote Threading from aeosynths tree.

- Mayhem