@@ -3,6 +3,7 @@ master
   It is now possible to set a Interval for background tabs.
   Add Optional increase value for Updater.
 - Zixaphir
+  Custom Navigation
   Linkification
 
 2.35.6
